--- a/css/index.css
+++ b/css/index.css
@@ -1,154 +1,298 @@
-nav{
-    display: flex;
+:root {
+  --orange: #fe5e35;
 }
-.nav-items{
-    display: flex;
-    margin: auto;
-    gap: 60px;
-    margin-top: 15px;
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", "Helvetica Neue", Helvetica;
 }
-.nav-item{
-    font-size: 15px;
-    font-weight: 400;
-    font-family: Poppins;
-    color: rgb(145, 146, 147);
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 3rem 5rem;
 }
-img:first-child{
-    margin-left: 60px;
-    margin-top: 18px;
-    width: 100px;
+
+.nav-items {
+  display: flex;
+  gap: 5rem;
 }
-.nav-item:hover{
-    color: rgb(255, 69, 2);
-    
+
+.nav-item {
+  font-size: 20px;
+  font-weight: 400;
 }
-nav img:last-child{
-    width: 300px;
-    margin-top: 20px;
+
+nav img:last-child {
+  margin: 0 -5rem;
 }
-h3 img:first-child{
-    position: absolute;
-    width: 50px;
-    margin-left: 1%;
-    margin-top: 3%;
+
+.active-item {
+  color: var(--orange);
+  font-weight: 800;
 }
-h3{
-    position: absolute;
-    font-size: 40px;
-    font-family: Poppins;
-    font-weight: 300;
-    margin-left: 5%;
-    top: 2%;
+
+.intro-section {
+  display: flex;
+  gap: 10rem;
+  margin-top: 4rem;
+  margin-left: 8rem;
 }
-.left-section{
-    position: absolute;
+
+.left-section h3 {
+  font-size: 3rem;
+  font-weight: 300;
 }
-h1{
-    margin-left: 5%;
-    font-family: Fredoka One;
-    font-size: 65px;
-    margin-top: 15%;
+
+.left-section img {
+  width: 50px;
+}
+
+.left-section h1 {
+  font-size: 5rem;
+  font-family: "Fredoka One";
+  font-weight: 300;
+}
+
+.sub-headlines {
+  margin: 3rem 5rem;
+}
+
+.sub-headline {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+  margin: 10px;
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+.sub-headline img {
+  background: var(--orange);
+  border-radius: 50%;
+  padding: 10px;
+  width: 18px;
+}
+.text {
+  width: 700px;
+  color: #a5a5a5;
+}
+
+.right-section {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+}
+
+.discount {
+  position: absolute;
+  width: 140px;
+  bottom: 6.5rem;
+  left: -3rem;
+  z-index: 0;
+}
+
+.discount-content h4,
+h1 {
+  font-family: "Fredoka One";
+}
+
+.discount-content {
+  position: absolute;
+  bottom: 9rem;
+  left: -0.5rem;
+  color: #fff;
+  z-index: 10;
+}
+
+.headphones {
+  z-index: -20;
+  width: 550px;
+  margin-top: -2rem;
+}
+
+.action-btns {
+  margin-top: 5rem;
+}
+
+.action-btns .action-btn {
+  margin-right: 1.5rem;
+}
+
+.action-btn {
+  background: var(--orange);
+  border: none;
+  padding: 1rem 2rem;
+  font-size: 1.2rem;
+  color: #fff;
+  border-radius: 3rem;
+  width: fit-content;
+  text-align: center;
+  margin: auto;
+}
+
+.dots {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: -1rem;
+  margin-bottom: 1rem;
+}
+
+.dot {
+  width: 25px;
+  height: 25px;
+  background: #000;
+  border-radius: 100%;
+}
+
+.yellow-dot {
+  background: rgb(255, 230, 0);
+}
+.tomato-dot {
+  background: var(--orange);
+}
+
+@media screen and (max-width: 640px) {
+  nav {
+    margin: 20px;
+  }
+  nav :first-child {
     height: 40px;
-}
-.sub-headline img{
-    background-color: rgb(255, 69, 2);
-    width: 20px;
-    border-radius: 25px;
-    margin-left: 10%;
-    margin-right: 1%;
-}
-.sub-headline{
-    font-family: Poppins;
-    height: 25px;
-    /* margin-left: 10px; */
-}
-.text{
-    font-family: Poppins;
-    color: rgb(179, 181, 181);
-    margin-top: 10%;
-    margin-left: 5%;
-    font-size: 15px;
-}
-p{
-    width: 740px;
-}
-.action-btns{
-    margin-left: 5%;
-    margin-top: 5%;
-}
-.action-btn{
-    padding: 10px 20px;
-    background-color: orangered;
-    color: white;
-    font-family: Poppins;
-    border: none;
-    border-radius: 25px;
-}
-.action-btns button:last-child{
-    margin-left: 2%;
-}
-.headphone-div{
-    position: absolute;  
-    display: flex;
-    margin-left: 55%;
-    /* border: 2px solid red; */
-}
-.headphone-div img:last-child{
-    width: 500px;
-    margin-top: -0%;
-}
-.headphone-div img:first-child{
-    position: absolute;
-    margin-top: 60%;
-    margin-left: -5%;
-    width: 130px;
-    
-}
-.discount-content{
-    /* border: 2px solid blue; */
-    position: absolute;
-    top: 63%;
-    color: white;
-    line-height: .5;
-}
-.discount-content h1{
-    font-size: 45px;
+    z-index: 2;
+  }
+  .nav-items {
+    display: none;
+  }
+  nav img:last-child {
+    margin: 0;
+    width: 250px;
+  }
+
+  .intro-section {
+    margin: 1rem;
+    flex-direction: column;
+    text-align: center;
+    gap: 0;
+  }
+  .left-section h3 {
+    font-size: 1.8rem;
     font-weight: 300;
-    margin-left: -2px;
-}
-.discount-content h4{
-    font-family: Poppins;
-    font-weight: 200;
-    font-size: 15px;
-    margin-left: 20%;
-}
-.right-section button:last-child{
-    margin-top: 34%;
-    margin-left: 67.5%;
-    position: absolute;
-}
-.dots{
-    position: absolute;
-    top: 80%;
-    left: 68.5%;
-}
-.dot{
+  }
+  .left-section img {
+    width: 30px;
+  }
+  .left-section h1 {
+    font-size: 3rem;
+    font-family: "Fredoka One";
+    font-weight: 300;
+  }
+
+  .sub-headlines {
+    margin: 1rem;
+  }
+
+  .sub-headline {
     display: flex;
-    width: 15px;
-    height: 15px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    margin: 10px;
+    font-size: 1rem;
+    font-weight: 300;
+  }
+
+  .sub-headline img {
+    background: var(--orange);
     border-radius: 50%;
+    padding: 8px;
+    width: 8px;
+  }
+  .text {
+    color: #a5a5a5;
+    width: auto;
+    display: none;
+  }
+
+  .right-section {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+  }
+
+  .discount {
     position: absolute;
-    
+    width: 100px;
+    bottom: 6.5rem;
+    left: 0;
+    z-index: 0;
+  }
+
+  .discount-content h4,
+  h1 {
+    font-family: "Fredoka One";
+  }
+
+  .discount-content {
+    position: absolute;
+    bottom: 130px;
+    left: 20px;
+    color: #fff;
+    z-index: 10;
+    font-size: 14px;
+  }
+
+  .headphones {
+    z-index: -20;
+    width: 300px;
+    margin-top: 1rem;
+  }
+
+  .action-btns {
+    margin-top: 1rem;
+  }
+
+  .action-btns .action-btn {
+    margin: 0.2rem;
+  }
+
+  .action-btn {
+    background: var(--orange);
+    border: none;
+    padding: 1rem;
+    font-size: 1rem;
+    color: #fff;
+    border-radius: 3rem;
+    width: fit-content;
+    text-align: center;
+    margin: auto;
+  }
+
+  .dots {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: -1rem;
+    margin-bottom: 1rem;
+  }
+
+  .dot {
+    width: 25px;
+    height: 25px;
+    background: #000;
+    border-radius: 100%;
+  }
+
+  .yellow-dot {
+    background: rgb(255, 230, 0);
+  }
+  .tomato-dot {
+    background: var(--orange);
+  }
 }
-.yellow-dot{
-    background-color: yellow;
-    
-}
-.tomato-dot{
-    background-color: tomato;
-    margin-left: 40px;
-}
-.black-dot{
-    background-color: black;
-    margin-left: 80px;
+@media screen and (max-width: 1007px) {
 }
